[package]
name = "hal"
version = "0.1.0"
authors = ["YdrMaster <ydrml@hotmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
d1-pac = "0.0.31"
nb = "1.1.0"
