cargo-features = ["per-package-target"]

[package]
name = "see"
version = "0.1.0"
edition = "2021"
build = "build.rs"
forced-target = "riscv64imac-unknown-none-elf"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = "0.3.0"
riscv = "0.9"
r0 = "1"
aclint = "0.0.0"
rcore-console = "0.0.0"

hal = { path = "../hal" }
common = { path = "../common" }
fast-trap = { git = "https://github.com/YdrMaster/fast-trap", rev = "ffb40e2", features = [
    "riscv-m",
] }
