cargo-features = ["per-package-target"]

[package]
name = "see"
version = "0.1.0"
forced-target = "riscv64imac-unknown-none-elf"
authors = ["YdrMaster <ydrml@hotmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = "0.3.2"
sbi-spec = { version = "0.0.7", features = ["legacy"] }
riscv = "0.11.1"
aclint = "0.0.0"
rcore-console = "0.0.0"

hal = { path = "../hal" }
common = { path = "../common" }
fast-trap = { version = "=0.0.1", features = ["riscv-m"] }
