cargo-features = ["per-package-target"]

[package]
name = "spl"
version = "0.1.0"
edition = "2021"
build = "build.rs"
forced-target = "riscv64imac-unknown-none-elf"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r0 = "1"
hal = { path = "../hal" }
common = { path = "../common" }
