cargo-features = ["per-package-target"]

[package]
name = "spl"
version = "0.0.0"
edition = "2021"
forced-target = "riscv64imac-unknown-none-elf"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hal = { path = "../hal" }
common = { path = "../common" }
