cargo-features = ["per-package-target"]

[package]
name = "spl"
version = "0.0.0"
forced-target = "riscv64imac-unknown-none-elf"
authors = ["YdrMaster <ydrml@hotmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hal = { path = "../hal" }
common = { path = "../common" }
