cargo-features = ["per-package-target"]

[package]
name = "test-kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"
forced-target = "riscv64imac-unknown-none-elf"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-testing = { git = "https://github.com/rustsbi/sbi-testing", rev = "b64abbe" }
hal = { path = "../hal" }
riscv = "0.8"
spin = "0.9"
r0 = "1"
