cargo-features = ["per-package-target"]

[package]
name = "test-kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"
forced-target = "riscv64imac-unknown-none-elf"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-testing = { version = "0.0.1", features = ["log"] }
log = "0.4.17"
riscv = "0.9.0"
spin = "0.9"
r0 = "1"
rcore-console = "0.0.0"
hal = { path = "../hal" }
