[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
clap-verbosity-flag = "2.0"
log = "0.4.17"
env_logger = "0.9"
once_cell = "1.13.0"
os-xtask-utils = "0.0.0"
common = { path = "../common" }
