[package]
name = "xtask"
version = "0.1.0"
authors = ["YdrMaster <ydrml@hotmail.com>"]

edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
log = "0.4.21"
env_logger = "0.11.3"
once_cell = "1.19.0"
os-xtask-utils = "0.0.0"
common = { path = "../common" }
